--- a/index.html
+++ b/index.html
@@ -6,21 +6,32 @@
   </head>
   <body>
     <!-- اكتب اسمك بعد مرحباً -->
-    <h1>مرحباً، أنا اسمي</h1>
+    <h1>مرحباً، أنا ساره </h1>
 
     <!-- هنا img ارفق شعار الكويت تبرمج الموجود في مجلد -->
     <!-- استخدم أحد وسوم الاحتواء لتضع الصورة داخلها
          div, span وسوم الاحتواء هي -->
+         <div>
+           <img width="200px" src="./img/kwcodes.png" alt="kuwait codes logo">
+         </div>
 
-    
     <!-- 👇 ارفق رابط لموقع الكويت تبرمج هنا -->
+    <a
+     href="https://app.code.kw/tracks/">
+     <p><i> اضغط هنا لزياره موقع الكويت تبرمج </i></p>
+    </a>
     <!-- ثم اضغط ادخال a اختصار: اكتب حرف -->
     <!-- code.kw :رابط الموقع -->
-    <p>اضغط هنا لزيارة موقع الكويت تبرمج</p>
-
-    
     <!-- أنشئ قائمة غير مرتبة تحتوي على طعامك المفضل -->
+   <ul>
     <h3>🥘 طعامي المفضل</h3>
-
+    <li>pasta</li>
+    <li>cake</li>
+    <li>pizza</li>
+    <li>ice cream</li>
+   </ul>
+   <button>
+     <a href="./blankpage.html">button</a>
+   </button>
   </body>
 </html>
