تم تعديل البونص

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <li>ice cream</li>
    </ul>
    <button>
-     <a href="./blankpage.html">button</a>
+     <a href="../web-cw-1/index.html">button</a>
    </button>
   </body>
 </html>
